<resources>
    <string name="app_name">Coloring</string>

    <string name="bitmap">bitmap</string>
    <string name="size">Size</string>
    <string name="generate">Gnerate</string>
    <string name="speed">Speed</string>
    <string name="size_x">size X</string>
    <string name="x">x</string>
    <string name="size_y">size y</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="icon">icon</string>

</resources>