<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/size"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_x"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_size_x"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/bg_transparent_8"
            android:gravity="center"
            android:hint="@string/size_x"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:textSize="18sp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/ll"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_size" />

        <TextView
            android:id="@+id/tv_x"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginVertical="36dp"
            android:gravity="center"
            android:text="@string/x"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/ll"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_size" />

        <EditText
            android:id="@+id/et_size_y"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_transparent_8"
            android:gravity="center"
            android:hint="@string/size_y"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:textSize="18sp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/ll"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_size" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_left_8"
                android:text="@string/cancel"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_right_8"
                android:text="@string/ok"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
